# agent-self-evolution

./: LICENSE  README.md  pyproject.toml
examples/: __init__.py
src/agent_evolution/: __init__.py
src/agent_evolution/algorithms/: __init__.py  bayesian_optimizer.py  reinforcement_learner.py  statistical_analyzer.py
src/agent_evolution/core/: __init__.py  evolution_engine.py  experience_logger.py  strategy_analyzer.py
tests/: test_evolution.py
