[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-self-evolution"
version = "0.1.0"
description = "Lightweight self-evolution system for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gongbu Ministry"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
